# text-perturbation

./: .gitignore  main_testyoutubelive.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yaml  python-publish.yaml
experiments/: experiment.ipynb
src/dhirajpodar/text_perturbation/components/: test.py
src/main/: main.py
